# dd_rules_oci

./: .gitignore  MODULE.bazel  justfile
go/cmd/ocitool/: BUILD.bazel  load_cmd.go  main.go  tar_cmd.go
go/internal/tarutil/: tarappend.go
oci/: defs.bzl  image.bzl  load.bzl  providers.bzl  tar.bzl
tests/load/: BUILD.bazel
